--- a/app/src/main/res/layout/activity_menu_activity.xml
+++ b/app/src/main/res/layout/activity_menu_activity.xml
@@ -14,20 +14,20 @@
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="67dp"
+            android:layout_alignStart="@+id/imageButton2"
+            android:layout_marginBottom="47dp"
             android:background="@drawable/icon2" />
 
         <ImageButton
             android:id="@+id/imageButton2"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageButton"
-            android:layout_marginTop="70dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="41dp"
             android:background="@drawable/icon1" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
