--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <item android:drawable="@android:color/darker_gray" />
-    <item>
-        
-        <bitmap android:src="@drawable/wolf_dummy_logo"
-            android:gravity="center"/>
-    </item>
 
+    <item android:drawable="@color/colorPrimary"/>
 </layer-list>
