--- a/app/src/main/res/layout/activity_news__display.xml
+++ b/app/src/main/res/layout/activity_news__display.xml
@@ -9,7 +9,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView">
+        android:id="@+id/listView"
+        android:visibility="visible">
+
     </ListView>
 
 </android.support.constraint.ConstraintLayout>
