--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#03a9f4</color>
     <color name="colorPrimaryDark">#03a9f4</color>
     <color name="colorAccent">#b3e5fc</color>
+    <color name="prog">#FF5252</color>
 </resources>
