--- a/app/src/main/res/layout/customlayout.xml
+++ b/app/src/main/res/layout/customlayout.xml
@@ -2,16 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="31dp"
+        android:layout_alignTop="@+id/headlineView"
+        android:layout_marginStart="17dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
@@ -22,14 +21,15 @@
         android:layout_marginStart="29dp"
         android:layout_marginTop="18dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/authorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView"
         android:layout_alignStart="@+id/headlineView"
-        android:layout_marginBottom="11dp"
-        android:text="TextView" />
+        android:layout_below="@+id/imageView"
+        android:text="TextView"
+        android:textStyle="italic"/>
 </RelativeLayout>
