--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#03a9f4</color>
     <color name="colorAccent">#b3e5fc</color>
     <color name="prog">#FF5252</color>
+    <color name="spinnerColor">#FFE5F1F7</color>
 </resources>
