--- a/app/src/main/res/layout/activity_custom_search.xml
+++ b/app/src/main/res/layout/activity_custom_search.xml
@@ -8,17 +8,17 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="83dp"
         android:ems="10"
-        android:hint="location" />
+        android:hint="Keyword" />
 
     <Spinner
         android:id="@+id/spinnerFilter"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"
@@ -27,7 +27,7 @@
 
     <Spinner
         android:id="@+id/spinnersortby"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinnerFilter"
         android:layout_centerHorizontal="true"
@@ -43,6 +43,7 @@
         android:layout_marginBottom="56dp"
         android:background="@drawable/button_bg_round"
         android:padding="15dp"
-        android:text="Go" />
+        android:text="Go"
+        android:onClick="onGoSelected"/>
 
 </RelativeLayout>
