--- a/app/src/main/res/layout/customlayout.xml
+++ b/app/src/main/res/layout/customlayout.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
+
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/headlineView"
-        android:layout_marginStart="17dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="6dp" />
 
     <TextView
         android:id="@+id/headlineView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="18dp"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_marginStart="24dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="TextView"
-        android:textStyle="bold"/>
+        android:fontFamily="serif"
+        android:text="Headline"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="18sp"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/authorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView"
         android:layout_alignStart="@+id/headlineView"
-        android:layout_below="@+id/imageView"
-        android:text="TextView"
-        android:textStyle="italic"/>
+        android:layout_marginBottom="9dp"
+        android:fontFamily="serif"
+        android:text="Author"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="10sp" />
 </RelativeLayout>
